# ZSBOM

./: -- SQLite.sql  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_LICENSES  config.yaml  pyproject.toml  requirements.txt  setup.py  validation_report.json  zsbom.config.yaml
.github/workflows/: ci.yml  pr-scan.yml
depclass/: classify.py  cli.py  config_manager.py  config_validator.py  cvss_utils.py  environment_detector.py  extract.py  metadata.py  models.py  risk.py  risk_calculator.py  risk_model.py  sbom.py  scanner.py  threshold_checker.py  upload_orchestrator.py  validate.py
depclass/cli/: __init__.py  app.py
depclass/cli/commands/: __init__.py  scan.py  upload.py
depclass/config/: default.yaml
depclass/core/: __init__.py  config_manager.py  file_manager.py  scanner.py  statistics.py  uploader.py
depclass/db/: vulnerability.py
depclass/dimension_scorers/: __init__.py  base.py  cwe_coverage.py  declared_vs_installed.py  enhanced_data_utils.py  known_cves.py  npm_abandonment.py  npm_dep_confusion.py  npm_hygiene.py  npm_lock_discipline.py  npm_typosquat.py  package_abandonment.py  typosquat_heuristics.py
depclass/ecosystems/: __init__.py
depclass/ecosystems/npm/: __init__.py  normalise.py  reader.py  registry.py
depclass/enhancers/: __init__.py  constants.py  deps_dev_provider.py  formatters.py  github_provider.py  mitre_provider.py  mixins.py  orchestrator.py  osv_provider.py  utils.py
depclass/extractors/: __init__.py  base.py
depclass/extractors/python/: __init__.py  extractor.py
depclass/extractors/scalibr/: Makefile  __init__.py  build.py  extractor.py  go.mod  go.sum  scalibr_wrapper.go  wrapper.py
depclass/extractors/scalibr/classifiers/: __init__.py  base.py  java.py  javascript.py  npm.py  registry.py
depclass/github/: __init__.py  pr_comment_generator.py
depclass/interfaces/: __init__.py  scanner.py
depclass/metadata/: __init__.py  collector.py  environment.py  error_tracker.py  performance.py  repository.py
depclass/notification/: gchat.py
depclass/rich_utils/: ui_helpers.py
depclass/services/: __init__.py  pypi_service.py
depclass/upload/: __init__.py  api_client.py  environment_detector.py  exceptions.py  file_validator.py  models.py  repository.py  upload_orchestrator.py
depclass/utils/: __init__.py  api_error_handler.py  exceptions.py
depclass/vulnerability_sources/: base.py  osv_source.py  safety_db.py
depclass/weakness_sources/: base.py  mitre.py  nvd.py
requests/: __init__.py  adapters.py
tests/: test_config_validator.py  test_dimension_scorers.py  test_environment_detector.py  test_extract.py  test_framework_compliance.py  test_metadata.py  test_npm_ecosystem.py  test_risk.py  test_risk_enhanced.py  test_schema_validation.py  test_transitive_analysis.py  test_upload_environment_detector.py  test_upload_file_validator.py  test_upload_integration.py
tests/utils/: test_api_error_handler.py
